<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>example_pkg</name>
  <version>0.0.1</version>
  <description>A sample ROS 2 package</description>

  <maintainer email="radams.official1@gmail.com">John Ryu Adams</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/radamsfr/ros-playground.git</url>
  <url type="bugtracker">https://github.com/radamsfr/ros-playground/issues</url>

  <author>John Ryu Adams</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
